--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -45,15 +45,29 @@ a:hover {
 }
 
 /* ======== Header ======== */
-.header {
+.fixed-header {
+    background: #e6f0ff;
+    padding-top: 26px;
+    position: sticky;
+    top: -26px;
+    z-index: 1;
+}
+
+.Hero-wrap {
+    display: flex;
+    flex-direction: column;
     position: relative;
     background: #e6f0ff;
     height: 100vh;
 }
-
-.navbar {
-    padding-top: 38px;
+.navbar .back-home {
     display: flex;
+    align-items: center;
+}
+.navbar {
+    padding: 12px 0;
+    display: flex;
+    align-items: center;
 }
 
 .navbar ul {
@@ -86,7 +100,7 @@ a:hover {
 }
 
 .hero {
-    margin-top: 10.31rem;
+    margin-top: 130px;
 }
 .hero .info {
     width: 51%;
