--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -5,6 +5,10 @@
     --primary-color: #0f1b4c;
 }
 
+html,
+body {
+    scroll-behavior: smooth;
+}
 html {
     font-size: 62.5%;
 }
@@ -55,10 +59,11 @@ a:hover {
 
 .Hero-wrap {
     display: flex;
+    justify-content: center;
     flex-direction: column;
     position: relative;
     background: #e6f0ff;
-    height: 100vh;
+    height: calc(100vh - 90px);
 }
 .navbar .back-home {
     display: flex;
@@ -99,14 +104,11 @@ a:hover {
     border-radius: 8px;
 }
 
-.hero {
-    margin-top: 130px;
-}
-.hero .info {
+.Hero-wrap .info {
     width: 51%;
 }
 
-.hero .sub-title {
+.Hero-wrap .sub-title {
     color: #687690;
     font-size: 1.8rem;
     font-weight: 500;
@@ -114,7 +116,7 @@ a:hover {
     letter-spacing: 0.01em;
 }
 
-.hero .title {
+.Hero-wrap .title {
     margin-top: 8px;
     color: var(--primary-color);
     font-size: 6.2rem;
@@ -122,7 +124,7 @@ a:hover {
     line-height: 1.19; /* 118.75% */
 }
 
-.hero .desc {
+.Hero-wrap .desc {
     margin-top: 30px;
 
     color: #5a6473;
